[package]
name = "gen_parser"
version = "0.1.0"
authors = ["David L. Inman <davidlevere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir_data = { path = "../ir_data", version = "0.1.0" }
parse_input = { path = "../parse_input", version = "0.1.1" }

